[package]
name = "pihex"
version = "0.1.5"
authors = ["itchyny <itchyny@hatena.ne.jp>"]
description = "Arbitrary place hexadecimal digits viewer of pi written in Rust"
repository = "https://github.com/No-one-important/pihex-rs"
readme = "README.md"
license = "MIT"
keywords = ["pi", "math"]
categories = ["algorithms"]
edition = "2021"

[dependencies]
clap = "2.33.3"

[[bin]]
name = "pihex"
doc = false
